# AGSistemasVeiculos

./: .env.example  README.md  docker-compose.yaml  manage.py  pyproject.toml
AGSistemasVeiculos_project/: asgi.py  settings.py  urls.py  wsgi.py
carro/: forms.py  models.py  urls.py  views.py
carro/migrations/: 0001_initial.py  0002_alter_veiculo_km_troca_oleo.py  0003_veiculo_veiculo.py
carro/static/js/: index.js
carro/templates/carro/: index.html  register_car.html
carro/templates/carro/layouts/: _content_delete_modal.html  _form_car.html
controle/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
controle/migrations/: 0001_initial.py  0002_alter_controleregistro_km_pecorrido.py  0003_alter_controleregistro_retorno_and_more.py  0004_alter_controleregistro_motorista_and_more.py  0005_alter_controleregistro_motorista_and_more.py
controle/static/js/: controle.js
controle/templates/controle/: index.html
controle/templates/controle/layouts/: _form_controle.html  _table_list_controle.html
core/static/css/: daisyUI_4.10.css
core/templates/core/: base.html
core/templates/core/layouts/: footer.html
motorista/: forms.py  models.py  urls.py  views.py
motorista/migrations/: 0001_initial.py
motorista/templates/motorista/: list_and_register_motorista.html
user/: models.py  tests.py
user/migrations/: 0001_initial.py
