[tool.poetry]
name = "agsistemasveiculos-project"
version = "0.1.0"
description = ""
authors = ["Jonathas David Santos do Nascimento <jhone.test14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
python-decouple = "^3.8"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
